# Multi-agent-loop-orchestration

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: lint.yml  smoke-test.yml
agents/: openai.yaml
assets/runtime-harness/orchestration/: .gitignore  README.md  agent-adapter.json  operating-policy.json  state.json  tasks.md
assets/runtime-harness/orchestration/ci/: write-lock-check.yml
assets/runtime-harness/orchestration/evals/rubrics/: project-quality-rubric.md
assets/runtime-harness/orchestration/hooks/: pre-commit
assets/runtime-harness/orchestration/schemas/: approval.schema.json  blocker.schema.json  report.schema.json  state.schema.json
assets/runtime-harness/orchestration/subagents/: manifest.json
docs/: example-run.md  github-upload-checklist.md  operator-guide.md  runtime-boundaries.md
scripts/: adopt_project.py  create_runtime_harness.py  smoke_test_runtime_harness.py
tests/: _helpers.py  conftest.py  test_daemon_budget.py  test_daemon_completion.py  test_decision_gate.py  test_enforce_write_lock.py  test_gates_integration.py  test_guard_files.py  test_install_hooks.py  test_phase_gate.py  test_release_gate.py  test_result_contract.py  test_run_cycle.py  test_state_store.py  test_write_lock.py
